--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -26,7 +26,7 @@
 
     .img-container img {
         box-shadow: $secondary 102px 10px 200 4px;
-        border-radius: 50%;
+        // border-radius: ;
     }
 
     .text-container {
